--- a/main.css
+++ b/main.css
@@ -1,3 +1,11 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
+
 
 @font-face {
     font-display: swap; 
@@ -33,7 +41,8 @@
 
 
 * {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 html {
@@ -41,8 +50,13 @@ html {
 }
 
 body {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     height: 100%;
     font-family:  "Plus Jakarta Sans", sans-serif;
     margin: 0;
@@ -50,7 +64,9 @@ body {
 }
 
 .site-main {
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
 }
 
 .container {
@@ -61,16 +77,28 @@ body {
 }
 
 .site-header__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 
 .site-header__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .nav__link--active:hover {
@@ -97,8 +125,12 @@ body {
 }
 
 .nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     list-style: none;
     margin-top: 32px;
     margin-right: auto;
@@ -117,6 +149,8 @@ body {
     line-height: 150%;
     color: #101010;
     text-decoration: none;
+    -webkit-transition: color 0.5s ease;
+    -o-transition: color 0.5s ease;
     transition: color 0.5s ease;
 }
 
@@ -139,6 +173,8 @@ body {
     background-color: black;
     padding: 12px 24px;
     border-radius: 6px;
+    -webkit-transition: border 0.5s ease, background-color 0.5s ease, color 0.5s ease;
+    -o-transition: border 0.5s ease, background-color 0.5s ease, color 0.5s ease;
     transition: border 0.5s ease, background-color 0.5s ease, color 0.5s ease;
 }
 
@@ -162,6 +198,8 @@ body {
 }
 
 .hero__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -239,8 +277,11 @@ body {
 }
 
 .services__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin: 0;
     padding-left: 0;
     list-style: none;
@@ -254,6 +295,8 @@ body {
     margin-right: 32px;
     margin-bottom: 32px;
     padding: 40px 30px;
+    -webkit-transition: background-color 0.5s ease, color 0.5s ease;
+    -o-transition: background-color 0.5s ease, color 0.5s ease;
     transition: background-color 0.5s ease, color 0.5s ease;
 }
 
@@ -336,20 +379,29 @@ body {
 }
 
 .about__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     list-style: none;
     margin: 0;
     padding-left: 0;
 }
 
 .about__items {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-bottom: 100px;
 }
 
 .about__items--middle {
-    flex-direction: row-reverse;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
    
 }
 
@@ -423,8 +475,13 @@ body {
 
 .form {
     width: 1008px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin: 0 auto;
     padding-top: 54px;
     padding-right: 312px;
@@ -464,6 +521,8 @@ body {
     color: #fff;
     background-color: #1aab7b;
     border-radius: 6px;
+    -webkit-transition: background-color 0.5s ease;
+    -o-transition: background-color 0.5s ease;
     transition: background-color 0.5s ease;
 }
 
@@ -490,12 +549,19 @@ body {
 }     
 
 .footer__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
 .footer__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin: 0;
     padding-left: 0;
     list-style: none;
@@ -526,6 +592,8 @@ body {
     font-weight: 500;
     text-decoration: none;
     color: #a1abb7;
+    -webkit-transition: color 0.5s ease;
+    -o-transition: color 0.5s ease;
     transition: color 0.5s ease;
 }
 
@@ -557,7 +625,6 @@ body {
 .footer__socials-link:nth-child(3) {
     margin-right: 40px;
 }
-
 
 
 
